# HybridEvalJudge

./: .gitignore  CONTRIBUTING.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  set_api_keys.sh  setup_env.bat  setup_env.sh  test_api_keys.py  verify_git_safety.sh
config/: README.md  default_config.yaml
demo/: API_JUDGE_DEMO_SUMMARY.md  EXPLANATION.md  FREE_DEMO_SUMMARY.md  FREE_SETUP_GUIDE.md  HOW_IT_WORKS.md  QUICK_START_API_JUDGES.md  QUICK_START_FREE.md  README.md  SUMMARY.md  compliance_report.json  demo.py  full_pipeline_demo.py  full_pipeline_results.json  results.json  setup.py
docs/: ADVERSARIAL_TESTING.md  API_ERROR_HANDLING.md  API_JUDGE_ENSEMBLE.md  API_REFERENCE.md  API_TROUBLESHOOTING.md  BENCHMARK_VALIDATION.md  CLAIM_ROUTER.md  CLI_USAGE.md  ENVIRONMENT_SETUP.md  ERROR_HANDLING.md  EXAMPLES_INDEX.md  HALLUCINATION_METRICS.md  INDEX.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_TRACKING.md  PLUGIN_SYSTEM.md  RELIABILITY_VALIDATION.md  STREAMING_EVALUATOR.md  USAGE_GUIDE.md  VERIFIER_TRAINING.md
examples/: README.md  adversarial_tester_example.py  aggregation_engine_example.py  api_judge_ensemble_example.py  api_key_setup_guide_example.py  basic_usage.py  batch_processing_example.py  benchmark_validation_example.py  bias_detection_example.py  claim_router_example.py  cli_example.py  comprehensive_error_handling_example.py  consensus_analysis_example.py  data_models_example.py  device_detection_example.py  error_handling_example.py  evaluation_toolkit_example.py  false_acceptance_rate_example.py  gemini_judge_example.py  groq_judge_example.py  hallucination_metrics_example.py  hallucination_profile_example.py  judge_ensemble_example.py  performance_optimization_example.py  performance_tracker_example.py  plugin_system_example.py  preset_manager_example.py  prompt_manager_example.py  reliability_validator_example.py  report_generator_example.py  retrieval_component_example.py  simple_evaluation.py  specialized_verifier_example.py  (+3 more)
(+310 files in other folders)
